--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@ function getCorrectAnswer(questionNumber) {
     // Return the correct answer based on the question number
     switch (questionNumber) {
         case 1:
-            return "1";
+            return "衣冠禽兽";
         case 2:
-            return "2";
+            return "打草惊蛇";
         case 3:
-            return "3";
+            return "龙生九子";
         case 4:
-            return "4";
+            return "破门而入";
         case 5:
-            return "5";
+            return "蒙在古里";
         default:
             return "";
     }
